--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,11 @@
 {
-  "extends": "@atomix/eslint-config",
+  "extends": ["prettier"],
+  "plugins": ["prettier"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017
+  },
+  "rules": {
+    "prettier/prettier": ["error"]
   }
 }
