--- a/package.json
+++ b/package.json
@@ -5,20 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "test": "eslint src"
+    "eslint-check": "eslint --print-config . | eslint-config-prettier-check"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@atomix/eslint-config": "^6.4.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "eslint": "^5.13.0",
+    "circular-dependency-plugin": "5.0.2",
+    "eslint": "^5.3.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "pre-commit": "^1.2.2",
+    "prettier": "1.16.4",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
-  }
+  },
+  "pre-commit": [
+    "eslint-check"
+  ]
 }
