--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^5.3.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "3.0.1",
+    "jquery": "^3.3.1",
     "pre-commit": "^1.2.2",
     "prettier": "1.16.4",
     "webpack": "^4.23.1",
